--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -25,8 +25,8 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-     "electron": "electron .",
-    "start": "react-scripts start",
+    "electron": "electron .",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
