--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -20,9 +20,10 @@
   },
   "dependencies": {
     "electron": "^6.0.12",
+    "electron-is-dev": "^1.1.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "electron": "electron .",
