--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -3,23 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "./",
-  "main": "src/start.js",
+  "main": "public/electron.js",
   "build": {
-    "appId": "some.id.ofyours",
-    "directories": {
+    "appId": "com.example.electron-cra",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories":{
       "buildResources": "assets"
-    },
-    "win": {
-      "category": "your.app.category.type",
-      "iconUrl": "path-to-icon.png"
-    },
-    "mac": {
-      "category": "your.app.category.type",
-      "iconUrl": "path-to-icon.png"
     }
   },
   "dependencies": {
-    "electron": "^6.0.12",
     "electron-is-dev": "^1.1.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -48,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "electron-builder": "^21.2.0"
+    "electron-builder": "^21.2.0",
+    "electron": "^6.0.12"
   }
 }
