--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -15,6 +15,7 @@
     }
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.7.18",
     "axios": "^0.19.0",
     "electron-is-dev": "^1.1.0",
     "react": "^16.10.2",
