--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.7.18",
+    "@liskhq/lisk-cryptography": "^2.2.0",
+    "@liskhq/lisk-passphrase": "^2.0.3",
     "axios": "^0.19.0",
     "electron-is-dev": "^1.1.0",
     "react": "^16.10.2",
