--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -18,6 +18,7 @@
     "@amcharts/amcharts4": "^4.7.18",
     "@liskhq/lisk-cryptography": "^2.2.0",
     "@liskhq/lisk-passphrase": "^2.0.3",
+    "@liskhq/lisk-transactions": "^2.3.1",
     "axios": "^0.19.0",
     "electron-is-dev": "^1.1.0",
     "react": "^16.10.2",
