--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -19,12 +19,17 @@
     "@liskhq/lisk-cryptography": "^2.2.0",
     "@liskhq/lisk-passphrase": "^2.0.3",
     "@liskhq/lisk-transactions": "^2.3.1",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.0",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
     "axios": "^0.19.0",
     "cors-anywhere": "^0.4.1",
     "electron-is-dev": "^1.1.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "electron": "electron .",
