--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "electron": "electron .",
-    "start": "BROWSER=none react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
