[Fixed dependency testing module for running react scripts tests] [Added utils function for reducing array, updated tests for the same] [References issue #7]

--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -55,7 +55,8 @@
     ]
   },
   "devDependencies": {
-    "electron-builder": "^21.2.0",
-    "electron": "^6.0.12"
+    "@testing-library/jest-dom": "^5.5.0",
+    "electron": "^6.0.12",
+    "electron-builder": "^21.2.0"
   }
 }
