--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs:
       name: node/default
     working_directory: ~/repo/lisk-dex-electron  
     steps:
-      - checkout  
-          path: ~/repo
+      - checkout:  
+           path: ~/repo
       - node/with-cache:
           steps:
             - run: npm install
