--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
     "recharts": "^1.8.5",
+    "runtypes": "^4.1.0",
     "sodium-native": "^2.4.9",
     "typescript": "^3.8.3"
   },
