[updated eslintrc, added eslintignore to ignore unncessary folders] [refactored and applied lint fix on necessary files] [removed typescript and unnecessary packages from dev dependencies] [#23]

--- a/lisk-dex-electron/.eslintrc.json
+++ b/lisk-dex-electron/.eslintrc.json
@@ -6,6 +6,11 @@
     "es6": true
   },
   "parser": "babel-eslint",
+  "overrides": [
+    {
+      "files": ["*.jsx", "*.js"]
+    }
+  ],
   "rules": {
     "max-len": "off",
     "no-underscore-dangle": "off",
