--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -18,20 +18,13 @@
     "@liskhq/lisk-cryptography": "^2.2.0",
     "@liskhq/lisk-passphrase": "^2.0.3",
     "@liskhq/lisk-transactions": "^2.3.1",
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.11.0",
-    "@types/react": "^16.9.32",
-    "@types/react-dom": "^16.9.6",
     "axios": "^0.19.0",
     "cors-anywhere": "^0.4.1",
-    "electron-is-dev": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
     "recharts": "^1.8.5",
-    "runtypes": "^4.1.0",
-    "sodium-native": "^2.4.9",
-    "typescript": "^3.8.3"
+    "runtypes": "^4.1.0"
   },
   "scripts": {
     "electron": "electron .",
@@ -39,8 +32,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test src/tests",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext=js --ext=jsx src",
-    "lint-fix": "eslint --ext=js --ext=jsx --fix src"
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix ."
   },
   "eslintConfig": {
     "extends": "airbnb",
