--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -33,7 +33,12 @@
     "test": "react-scripts test src/tests",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-    "lint-fix": "eslint --fix ."
+    "lint-fix": "eslint --fix .",
+    "build-win32": "echo $npm_package_version",
+    "build-win64": "",
+    "build-macOSX": "",
+    "build-linux-x86": "",
+    "build-linux-x64": ""
   },
   "eslintConfig": {
     "extends": "airbnb",
@@ -74,6 +79,7 @@
     "babel-eslint": "^10.1.0",
     "electron": "^6.0.12",
     "electron-builder": "^21.2.0",
+    "electron-packager": "^14.2.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
