Use more efficient endpoints and fix order book sort bug

--- a/lisk-dex-electron/public/config.json
+++ b/lisk-dex-electron/public/config.json
@@ -25,7 +25,8 @@
   "markets": {
     "lsh/lsk": {
       "dexApiUrl": "http://18.206.164.187:7011",
-      "assets": ["lsh", "lsk"]
+      "assets": ["lsh", "lsk"],
+      "orderBookDepth": 20
     }
   }
 }
