--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
-jobs:
+jobs: 
   build-and-test:
     executor:
       name: node/default
@@ -11,10 +11,36 @@ jobs:
            path: ~/repo
       - node/with-cache:
           steps:
-            - run: npm install
+            - run: npm install  
             - run: npm run lint
             - run: npm test
+
+  distribute:
+    docker:
+      - image: tenatek/node-wine
+    working_directory: ~/repo/lisk-dex-electron  
+    steps:
+      - checkout:  
+           path: ~/repo
+      - run:
+          name: Build project
+          command: |
+            set +e
+            npm install     
+            npm run build
+      - run:
+          name: Create Build Artifact 
+          command: |
+            set +e
+            npm run build-all-platforms
+      - store_artifacts:
+          path: ~/repo/lisk-dex-electron/dist  
+            
 workflows:
     build-and-test:
       jobs:
         - build-and-test
+        - distribute:
+            type: approval
+            requires:
+              - build-and-test
