--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "./",
-  "main": "public/electron.js",
+  "main": "build/electron.js",
+  "author": "Jong, sacOO7",
+  "description": "Lisk DEX-UI app for exchanging tokens with sidechains",
   "build": {
     "appId": "com.example.electron-cra",
     "files": [
-      "build/**/*",
-      "node_modules/**/*"
+      "build/",
+      "!dist/",
+      "!public/",
+      "!src/",
+      "!node_modules/",
+      "!**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
+      "!.editorconfig",
+      "!**/._*",
+      "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,.gitignore,.gitattributes}",
+      "!**/{__pycache__,thumbs.db,.flowconfig,.idea,.vs,.nyc_output}",
+      "!**/{appveyor.yml,.travis.yml,circle.yml}",
+      "!**/{npm-debug.log,yarn.lock,.yarn-integrity,.yarn-metadata.json}",
+      "!**/{.eslintignore,.eslintrc.json}"
     ],
     "directories": {
       "buildResources": "assets"
@@ -34,8 +47,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint-fix": "eslint --fix .",
-    "build-all-platforms": "electron-packager ./ lisk-dex --all --out=dist",
-    "build-all-platfoms-using-docker": ""
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "eslintConfig": {
     "extends": "airbnb",
@@ -76,7 +89,6 @@
     "babel-eslint": "^10.1.0",
     "electron": "^6.0.12",
     "electron-builder": "^21.2.0",
-    "electron-packager": "^14.2.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
