[added scripts for packaging electron application, added docker shell script to spawn up cross platform packaging env][#23]

--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -48,7 +48,9 @@
     "lint": "eslint .",
     "lint-fix": "eslint --fix .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "multi-dist": "electron-builder -mwl",
+    "spawn-interactive-pacakging-env": "./docker-electron-env.sh"
   },
   "eslintConfig": {
     "extends": "airbnb",
