[updated circle-ci config, added artifacts isolator to host artifacts][#23]

--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -11,6 +11,7 @@
     "files": [
       "build/",
       "!dist/",
+      "!ci-scripts/",
       "!public/",
       "!src/",
       "!node_modules/",
