--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,8 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.1.6
 jobs: 
   build-and-test:
-    executor:
-      name: node/default
+    docker:
+      - image: mhart/alpine-node
     working_directory: ~/repo/lisk-dex-electron  
     steps:
       - checkout:  
@@ -32,8 +30,8 @@ jobs:
           name: Create Build Artifact 
           command: |
             set +e
-            npm run build-all-platforms
-            ci-scripts/artifact-zipper.sh
+            npm run dist
+            ci-scripts/artifacts-isolator.sh
       - store_artifacts:  
           path: ~/repo/lisk-dex-electron/dist/compressed
             
