--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             npm run lint
             npm test
 
-  distribute-app:
+  generate-artifact-win-lin:
     docker:
       - image: electronuserland/builder:wine
     working_directory: ~/repo/lisk-dex-electron  
@@ -38,7 +38,41 @@ jobs:
       - store_artifacts:  
           path: ~/repo/lisk-dex-electron/dist/artifacts
           destination: artifacts
-            
+
+  generate-artifact-mac:
+    macos:
+      xcode: 11.3.0
+    working_directory: ~/repo/lisk-dex-electron  
+    steps:
+      - checkout:  
+            path: ~/repo
+      - run:
+          name: Install node@v12.17.0
+          command: |
+            set +e
+            curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.34.0/install.sh | bash
+            export NVM_DIR="/opt/circleci/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            nvm install v12.17.0
+            nvm alias default v12.17.0
+            rm -rf ~./node-gyp
+            node -v
+      - run:
+          name: Build project
+          command: |
+            set +e
+            npm install     
+            npm run build
+      - run:
+          name: Create Build Artifact 
+          command: |
+            set +e
+            npm run dist
+            ci-scripts/artifacts-isolator.sh
+      - store_artifacts:  
+          path: ~/repo/lisk-dex-electron/dist/artifacts
+          destination: artifacts          
+          
 workflows:
     test-and-deploy:
       jobs:
@@ -47,6 +81,9 @@ workflows:
             type: approval
             requires:
               - build-and-test
-        - distribute-app:
+        - generate-artifact-win-lin:
+            requires:
+              - hold
+        - generate-artifact-mac:
             requires:
               - hold
