--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,9 @@ jobs:
           command: |
             set +e
             curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.34.0/install.sh | bash
-            export NVM_DIR="/opt/circleci/.nvm"
+            export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
             nvm install v12.17.0
             nvm alias default v12.17.0
             rm -rf ~./node-gyp
