--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,8 @@ jobs:
           name: Build project
           command: |
             set +e
-            npm install     
+            npm install    
+            npm install sodium-native 
             npm run build
       - run:
           name: Create Build Artifact 
