Allow switching between blockchain and DEX API for price history

--- a/lisk-dex-electron/public/config.json
+++ b/lisk-dex-electron/public/config.json
@@ -26,7 +26,8 @@
     "lsh/lsk": {
       "dexApiUrl": "https://ldex.exchange/dex/lsh-lsk/api",
       "assets": ["lsh", "lsk"],
-      "orderBookDepth": 20
+      "orderBookDepth": 20,
+      "priceHistoryAPI": "blockchain"
     }
   }
 }
