Work with different address sytem and cleanup styling

--- a/lisk-dex-electron/public/config.json
+++ b/lisk-dex-electron/public/config.json
@@ -32,8 +32,7 @@
     "lsh/lsk": {
       "apiURL": "https://ldex.exchange/dex/lsh-lsk/api",
       "assets": ["lsh", "lsk"],
-      "orderBookDepth": 20,
-      "priceHistoryAPI": "blockchain"
+      "orderBookDepth": 20
     }
   }
 }
