--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "homepage": "./",
   "main": "build/electron.js",
-  "author": "Jong, sacOO7",
+  "author": "Jax, Jong, sacOO7",
   "description": "Lisk DEX-UI app for exchanging tokens with sidechains",
   "dependencies": {
     "axios": "^0.19.0",
     "cors-anywhere": "^0.4.1",
-    "ldex-ui-ldpos-adapter": "^3.0.0",
+    "ldex-ui-ldpos-adapter": "^4.0.0",
     "ldex-ui-lisk-adapter": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
