Fix mainnet URLs

--- a/lisk-dex-electron/electron-builder.yml
+++ b/lisk-dex-electron/electron-builder.yml
@@ -7,7 +7,7 @@ asar: true
 protocols:
   name: Lisk Dex
   schemes:
-    - ldex.exchange
+    - ldex.trading
 
 mac:
   artifactName: ${name}-${version}-${os}.${ext}
