--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
           command: |
             set +e
             npm install
+            npm install sodium-native
             npm run build-prod
             npm run lint
             npm test
@@ -28,6 +29,7 @@ jobs:
           command: |
             set +e
             npm install
+            npm install sodium-native
             npm run build-prod
       - run:
           name: Create Build Artifact
@@ -47,15 +49,15 @@ jobs:
       - checkout:
             path: ~/repo
       - run:
-          name: Install node@v12.17.0
+          name: Install node@v12.18.2
           command: |
             set +e
             curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.34.0/install.sh | bash
             export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
             [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
-            nvm install v12.17.0
-            nvm alias default v12.17.0
+            nvm install v12.18.2
+            nvm alias default v12.18.2
             rm -rf ~./node-gyp
             node -v
       - run:
@@ -63,6 +65,7 @@ jobs:
           command: |
             set +e
             npm install
+            npm install sodium-native
             npm run build-prod
       - run:
           name: Create Build Artifact
