Rename market base currency to LSKC

--- a/lisk-dex-electron/public/config.json
+++ b/lisk-dex-electron/public/config.json
@@ -27,7 +27,7 @@
     }
   },
   "markets": {
-    "lsh/lsk": {
+    "lsh/lskc": {
       "apiURL": "https://ldex.trading/dex/lsh-lsk/api",
       "assets": ["lsh", "lsk"],
       "orderBookDepth": 20,
