--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -7,6 +7,7 @@
   "author": "Jax, Jong, sacOO7",
   "description": "Lisk DEX-UI app for exchanging tokens with sidechains",
   "dependencies": {
+    "@liskhq/lisk-cryptography": "^3.1.0",
     "axios": "^0.21.1",
     "cors-anywhere": "^0.4.1",
     "ldex-ui-ldpos-adapter": "^4.0.0",
@@ -15,7 +16,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
     "recharts": "^1.8.5",
-    "runtypes": "^4.1.0",
+    "runtypes": "^6.4.1",
     "sodium-native": "^3.2.1"
   },
   "scripts": {
