--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -9,9 +9,10 @@
   "dependencies": {
     "@liskhq/lisk-cryptography": "^3.1.0",
     "axios": "^0.21.1",
-    "cors-anywhere": "^0.4.1",
-    "ldex-ui-ldpos-adapter": "^4.0.0",
+    "cors-anywhere": "^0.4.4",
+    "ldex-ui-ldpos-adapter": "^4.2.0",
     "ldex-ui-lisk-adapter": "^1.2.0",
+    "ldex-ui-lisk-v3-adapter": "^1.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
