--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -14,7 +14,7 @@
     "ldex-ui-lisk-v3-adapter": "^1.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.4",
     "recharts": "^2.1.13",
     "runtypes": "^6.4.1",
     "sodium-native": "^3.2.1"
@@ -76,6 +76,11 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1"
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "react-error-overlay": "^6.0.9"
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   }
 }
