--- a/ldex-electron/package.json
+++ b/ldex-electron/package.json
@@ -7,25 +7,36 @@
   "author": "Jax, Jong, sacOO7",
   "description": "LDEX UI app for exchanging tokens with sidechains",
   "dependencies": {
+    "assert": "^2.1.0",
     "axios": "^0.21.1",
+    "buffer": "^6.0.3",
     "cors-anywhere": "^0.4.4",
+    "crypto-browserify": "^3.12.0",
     "ldex-ui-ark-adapter": "^4.3.3",
-    "ldex-ui-ldpos-adapter": "4.3.0",
+    "ldex-ui-ldpos-adapter": "^5.0.2",
     "ldex-ui-lisk-adapter": "^1.2.0",
     "ldex-ui-lisk-v3-adapter": "^1.4.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.1.13",
     "runtypes": "^6.4.1",
-    "sodium-native": "^3.4.1"
+    "sodium-native": "^3.4.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5"
   },
   "scripts": {
     "electron": "electron .",
-    "start": "BROWSER=none react-scripts start",
-    "start-prod": "BROWSER=none REACT_APP_PRODUCTION=true react-scripts start",
-    "build-dev": "BROWSER=none react-scripts build",
-    "build-prod": "BROWSER=none REACT_APP_PRODUCTION=true react-scripts build",
+    "start": "./node_modules/webpack-cli/bin/cli.js serve --config ./webpack.config.js",
+    "start-prod": "NODE_ENV='production' ./node_modules/webpack-cli/bin/cli.js serve --config ./webpack.config.js",
+    "build-dev": "./node_modules/webpack-cli/bin/cli.js --config ./webpack.config.js",
+    "build-prod": "NODE_ENV='production' ./node_modules/webpack-cli/bin/cli.js --config ./webpack.config.js",
     "test": "react-scripts test src/tests",
     "eject": "react-scripts eject",
     "lint": "eslint .",
@@ -69,16 +80,21 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.5.0",
-    "babel-eslint": "^10.1.0",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
     "electron": "^21.2.3",
     "electron-builder": "^23.6.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
-    "react-error-overlay": "^6.0.9"
+    "html-webpack-plugin": "^5.5.3",
+    "react-error-overlay": "^6.0.9",
+    "source-map-loader": "^4.0.1",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "resolutions": {
     "//": "See https://github.com/facebook/create-react-app/issues/11773",
